update on hte logo on idex and primary color

--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -634,7 +634,8 @@ RESULT:
 ========================================================================== */
 /* contains root variables to be used with css (see docs) */
 :root {
-  --theme-primary: #886ab5;
+  /* --theme-primary: #886ab5; */
+  --theme-primary: #fff;
   --theme-secondary: #868e96;
   --theme-success: #1dc9b7;
   --theme-info: #2196F3;
