--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,8 +67,8 @@
 
 .nav-menu li.active > a{
 	/*background-color: rgba(0, 0, 0, 0.1);*/
-	background-color:#22bf66;
-}
+	/* background-color:#22bf66;
+} */
 
 .nav-menu li.active > a{
 	/*background-color: rgba(0, 0, 0, 0.1);*/
