--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -634,8 +634,7 @@ RESULT:
 ========================================================================== */
 /* contains root variables to be used with css (see docs) */
 :root {
-  /* --theme-primary: #886ab5; */
-  --theme-primary: #fff;
+  --theme-primary: #886ab5;
   --theme-secondary: #868e96;
   --theme-success: #1dc9b7;
   --theme-info: #2196F3;
@@ -655,8 +654,10 @@ RESULT:
   --theme-primary-300: #a38cc6;
   --theme-primary-400: #967bbd;
   --theme-primary-500: #886ab5;
-  --theme-primary-600: #7a59ad;
-  --theme-primary-700: #6e4e9e;
+  /* --theme-primary-600: #7a59ad;
+  --theme-primary-700: #6e4e9e; */
+  --theme-primary-600: #f5fcff;
+  --theme-primary-700: #f5fcff;
   --theme-primary-800: #62468d;
   --theme-primary-900: #563d7c;
   --theme-success-50: #7aece0;
