app color change

--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -7267,13 +7267,13 @@ html:not(.root-text-sm):not(.root-text-lg):not(.root-text-xl) [data-class="root-
     color: white; }
 
 .bg-primary-600 {
-  background-color: #7a59ad;
+  background-color: #f5fcff;
   color: white; }
   .bg-primary-600:hover {
     color: white; }
 
 .bg-primary-700 {
-  background-color: #6e4e9e;
+  background-color: #f5fcff;
   color: white; }
   .bg-primary-700:hover {
     color: white; }
