--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -358,6 +358,10 @@ RESULT:
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(51, 148, 225, 0.18)), to(transparent));
   background-image: linear-gradient(270deg, rgba(51, 148, 225, 0.18), transparent);
   background-color:#FFFFFF; }
+  .page-sidebar {
+    background-image: -webkit-gradient(linear, right top, left top, from(rgba(51, 148, 225, 0.18)), to(transparent));
+    background-image: linear-gradient(270deg, rgba(51, 148, 225, 0.18), transparent);
+    background-color:#2e2d88; }
 
 /*
 %shadow-hover {
