--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -361,7 +361,7 @@ RESULT:
   .page-sidebar {
     background-image: -webkit-gradient(linear, right top, left top, from(rgba(51, 148, 225, 0.18)), to(transparent));
     background-image: linear-gradient(270deg, rgba(51, 148, 225, 0.18), transparent);
-    background-color:#104E8B; }
+    background-color:#1034a6; }
 
 /*
 %shadow-hover {
