update on side bar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -72,7 +72,7 @@
 
 .nav-menu li.active > a{
 	/*background-color: rgba(0, 0, 0, 0.1);*/
-	background-color:#1874cd;
+	background-color:#4666FF;
 }
 
 /*
