--- a/public/src/content/form_plugins/form_plugins_colorpicker/form_plugins_colorpicker.hbs
+++ b/public/src/content/form_plugins/form_plugins_colorpicker/form_plugins_colorpicker.hbs
@@ -261,7 +261,7 @@
 					<div class="panel-tag">
 						The colorpicker ColorItem class uses and comes bundled with Qix Color, a great color parsing library with a friendly API that allows you to manipulate and convert the color. ColorItem is just an abstraction layer on top of the library, which is more convenient for Bootstrap Colorpicker. In this example we use the ColorItem API to add color swatches based on a tetrad of the selected color 
 					</div>
-					<div id="cp16" data-color="#886ab5">
+					<div id="cp16" data-color="#27408b">
 						<input type="text" class="form-control" style="width:auto"/> <br>
 					</div>
 				</div>
