--- a/public/src/content/intel/intel_analytics_dashboard/intel_analytics_dashboard.hbs
+++ b/public/src/content/intel/intel_analytics_dashboard/intel_analytics_dashboard.hbs
@@ -23,7 +23,7 @@
 			$47,000
 		</span>
 	</div>
-	<span class="sparklines hidden-lg-down" sparkType="bar" sparkBarColor="#886ab5" sparkHeight="32px" sparkBarWidth="5px" values="3,4,3,6,7,3,3,6,2,6,4"></span>
+	<span class="sparklines hidden-lg-down" sparkType="bar" sparkBarColor="#27408b" sparkHeight="32px" sparkBarWidth="5px" values="3,4,3,6,7,3,3,6,2,6,4"></span>
 </div>
 <div class="subheader-block d-lg-flex align-items-center border-faded border-right-0 border-top-0 border-bottom-0 ml-3 pl-3">
 	<div class="d-inline-flex flex-column justify-content-center mr-3">
@@ -128,7 +128,7 @@
 								</span>
 
 								<div class="ml-auto d-inline-flex align-items-center">
-									<div class="sparklines d-inline-flex" sparktype="line" sparkheight="30" sparkwidth="70" sparklinecolor="#886ab5" sparkfillcolor="false" sparklinewidth="1" values="5,6,5,3,8,6,9,7,4,2"></div>
+									<div class="sparklines d-inline-flex" sparktype="line" sparkheight="30" sparkwidth="70" sparklinecolor="#27408b" sparkfillcolor="false" sparklinewidth="1" values="5,6,5,3,8,6,9,7,4,2"></div>
 									<div class="d-inline-flex flex-column small ml-2">
 										<span class="d-inline-block badge badge-success opacity-50 text-center p-1 width-6">97%</span>
 										<span class="d-inline-block badge bg-fusion-300 opacity-50 text-center p-1 width-6 mt-1">44%</span>
