--- a/public/src/content/statistics/statistics_peity/statistics_peity.hbs
+++ b/public/src/content/statistics/statistics_peity/statistics_peity.hbs
@@ -88,7 +88,7 @@
 									<span class="peity-line" data-peity='{ "fill": false, "stroke": "#ffc241", "height": 40, "width": "110", "strokeWidth": 3 }'>0,1,7,6,4,2,3,5,3,4</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-line" data-peity='{ "fill": false, "stroke": "#886ab5", "height": 40, "width": "110", "strokeWidth": 4 }'>5,3,9,6,5,3,1,7,6,4</span>
+									<span class="peity-line" data-peity='{ "fill": false, "stroke": "#27408b", "height": 40, "width": "110", "strokeWidth": 4 }'>5,3,9,6,5,3,1,7,6,4</span>
 								</div>
 							</div>
 						</div>
@@ -120,7 +120,7 @@
 									<span class="peity-line" data-peity='{ "fill": "#fe6bb0", "stroke": "#fd3995", "height": 40, "width": "110" }'>1,4,4,7,5,9,10,4,4,7,5,9,10</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-line" data-peity='{ "fill": "#886ab5", "stroke": "#6e4e9e", "height": 40, "width": "110" }'>5,3,9,6,5,3,1,7,6,4,4,1,5</span>
+									<span class="peity-line" data-peity='{ "fill": "#27408b", "stroke": "#6e4e9e", "height": 40, "width": "110" }'>5,3,9,6,5,3,1,7,6,4,4,1,5</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="peity-line" data-peity='{ "fill": "#ffc241", "stroke": "#ffc241", "height": 40, "width": "110" }'>0,1,7,6,4,2,3,5,3,4,3,1,4,6</span>
@@ -149,11 +149,11 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Bar charts can have positive or negative integers. You can change the bar colors via the following <code> data-peity='{ "fill": ["#7a59ad","#886ab5","#967bbd","#a38cc6"] }'</code>
+								Bar charts can have positive or negative integers. You can change the bar colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#886ab5","#967bbd","#a38cc6"], "height": 40, "width": "110" }'>5,3,9,6,5,9,7,3,5,2</span>
+									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"], "height": 40, "width": "110" }'>5,3,9,6,5,9,7,3,5,2</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#1dc9b7"], "height": 40, "width": "110" }'>4,-3,-6,-4,-5,-4,7,-3,-5,2</span>
@@ -184,7 +184,7 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Pie charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#886ab5","#967bbd","#a38cc6"] }'</code>
+								Pie charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
@@ -197,7 +197,7 @@
 									<span class="peity-pie" data-peity='{ "fill": ["#21dfcb","#fd3995"], "height": 40, "width": "50" }'>5/10</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-pie" data-peity='{ "fill": ["#886ab5","#1dc9b7","#2196F3","#ffc241","#fd52a3","#6e4e9e","#6ab8f7","#fe85be"], "height": 40, "width": "50" }'>2,3,4,7,9,10,5,6</span>
+									<span class="peity-pie" data-peity='{ "fill": ["#27408b","#1dc9b7","#2196F3","#ffc241","#fd52a3","#6e4e9e","#6ab8f7","#fe85be"], "height": 40, "width": "50" }'>2,3,4,7,9,10,5,6</span>
 								</div>
 							</div>
 						</div>
@@ -223,7 +223,7 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Donut charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#886ab5","#967bbd","#a38cc6"] }'</code>
+								Donut charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
@@ -236,7 +236,7 @@
 									<span class="peity-donut" data-peity='{ "fill": ["#21dfcb","#fd3995"], "height": 40, "width": "50" }'>5/10</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-donut" data-peity='{ "fill": ["#886ab5","#1dc9b7","#2196F3","#ffc241","#fd52a3","#6e4e9e","#6ab8f7","#fe85be"], "height": 40, "width": "50" }'>2,3,4,7,9,10,5,6</span>
+									<span class="peity-donut" data-peity='{ "fill": ["#27408b","#1dc9b7","#2196F3","#ffc241","#fd52a3","#6e4e9e","#6ab8f7","#fe85be"], "height": 40, "width": "50" }'>2,3,4,7,9,10,5,6</span>
 								</div>
 							</div>
 						</div>
@@ -325,7 +325,7 @@
 								<span data-peity='{ "fill": ["#ffdb8e", "#f2f2f2"], "innerRadius": 20, "radius": 28 }'>3/7</span>
 								<span data-peity='{ "fill": ["#1dc9b7", "#f2f2f2"], "innerRadius": 20, "radius": 25 }'>4/7</span>
 								<span data-peity='{ "fill": ["#2196F3", "#f2f2f2"], "innerRadius": 17, "radius": 21 }'>5/7</span>
-								<span data-peity='{ "fill": ["#886ab5", "#f2f2f2"], "innerRadius": 15, "radius": 18 }'>6/7</span>
+								<span data-peity='{ "fill": ["#27408b", "#f2f2f2"], "innerRadius": 15, "radius": 18 }'>6/7</span>
 								<span data-peity='{ "fill": ["#5d5d5d", "#f2f2f2"], "innerRadius": 13, "radius": 15 }'>7/7</span>
 							</div>
 						</div>
