--- a/public/src/content/statistics/statistics_sparkline/statistics_sparkline.hbs
+++ b/public/src/content/statistics/statistics_sparkline/statistics_sparkline.hbs
@@ -158,7 +158,7 @@
 										sparkType="line" 
 										sparkHeight="40" 
 										sparkWidth="110" 
-										sparkLineColor="#886ab5" 
+										sparkLineColor="#27408b" 
 										sparkFillColor="#a38cc6" 
 										sparkLineWidth="1" 
 										values="1,4,4,7,5,9,10,4,4,7,5,9,10"></span>
@@ -214,7 +214,7 @@
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="sparklines" 
 										sparkType="bar" 
-										sparkBarColor="#886ab5" 
+										sparkBarColor="#27408b" 
 										values="5,3,9,6,5,9,7,5,2,6,2,1,5,3,6,7,5,7"></span>
 								</div>
 
@@ -366,7 +366,7 @@
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="sparklines" 
 										sparkType="discrete" 
-										sparkLineColor="#886ab5" 
+										sparkLineColor="#27408b" 
 										values="-4,-7,6,3,7,6,-2,-8,4,6,2,6,4,-2,-4,-5"></span>
 								</div>
 
@@ -541,7 +541,7 @@
 										sparkBoxFillColor="#ffebc1" 
 										sparkBoxLineColor="#563d7c"  
 										sparkWhiskerColor="#563d7c" 
-										sparkMedianColor="#886ab5" 
+										sparkMedianColor="#27408b" 
 										sparkTargetColor="#fd3995" 
 										values="1, 3, 5, 8, 10, 15, 18"></span>
 								</div>
