--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -319,7 +319,7 @@ h6 small,
 .text-gradient {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(25%, #6e4e9e), color-stop(50%, #62468d), color-stop(75%, #0c7cd5), to(#0960a5));
   background: linear-gradient(180deg, #6e4e9e 25%, #62468d 50%, #0c7cd5 75%, #0960a5 100%);
-  color: #886ab5;
+  color: #27408b;
   background-clip: text;
   text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -437,7 +437,7 @@ RESULT:
 
 .header-function-fixed .btn-switch[data-class="header-function-fixed"], .nav-function-fixed .btn-switch[data-class="nav-function-fixed"], .nav-function-minify .btn-switch[data-class="nav-function-minify"], .nav-function-hidden .btn-switch[data-class="nav-function-hidden"], .nav-function-top .btn-switch[data-class="nav-function-top"], .footer-function-fixed .btn-switch[data-class="footer-function-fixed"], .nav-mobile-push .btn-switch[data-class="nav-mobile-push"], .nav-mobile-no-overlay .btn-switch[data-class="nav-mobile-no-overlay"], .nav-mobile-slide-out .btn-switch[data-class="nav-mobile-slide-out"], .mod-main-boxed .btn-switch[data-class="mod-main-boxed"], .mod-fixed-bg .btn-switch[data-class="mod-fixed-bg"], .mod-clean-page-bg .btn-switch[data-class="mod-clean-page-bg"], .mod-pace-custom .btn-switch[data-class="mod-pace-custom"], .mod-bigger-font .btn-switch[data-class="mod-bigger-font"], .mod-high-contrast .btn-switch[data-class="mod-high-contrast"], .mod-color-blind .btn-switch[data-class="mod-color-blind"], .mod-hide-nav-icons .btn-switch[data-class="mod-hide-nav-icons"], .mod-hide-info-card .btn-switch[data-class="mod-hide-info-card"], .mod-lean-subheader .btn-switch[data-class="mod-lean-subheader"], .mod-disable-animation .btn-switch[data-class="mod-disable-animation"], .mod-nav-link .btn-switch[data-class="mod-nav-link"], .mod-nav-dark .btn-switch[data-class="mod-nav-dark"], .mod-panel-icon .btn-switch[data-class="mod-panel-icon"] {
   color: #fff;
-  background: #886ab5 !important; }
+  background: #27408b !important; }
   .header-function-fixed .btn-switch[data-class="header-function-fixed"]:before, .nav-function-fixed .btn-switch[data-class="nav-function-fixed"]:before, .nav-function-minify .btn-switch[data-class="nav-function-minify"]:before, .nav-function-hidden .btn-switch[data-class="nav-function-hidden"]:before, .nav-function-top .btn-switch[data-class="nav-function-top"]:before, .footer-function-fixed .btn-switch[data-class="footer-function-fixed"]:before, .nav-mobile-push .btn-switch[data-class="nav-mobile-push"]:before, .nav-mobile-no-overlay .btn-switch[data-class="nav-mobile-no-overlay"]:before, .nav-mobile-slide-out .btn-switch[data-class="nav-mobile-slide-out"]:before, .mod-main-boxed .btn-switch[data-class="mod-main-boxed"]:before, .mod-fixed-bg .btn-switch[data-class="mod-fixed-bg"]:before, .mod-clean-page-bg .btn-switch[data-class="mod-clean-page-bg"]:before, .mod-pace-custom .btn-switch[data-class="mod-pace-custom"]:before, .mod-bigger-font .btn-switch[data-class="mod-bigger-font"]:before, .mod-high-contrast .btn-switch[data-class="mod-high-contrast"]:before, .mod-color-blind .btn-switch[data-class="mod-color-blind"]:before, .mod-hide-nav-icons .btn-switch[data-class="mod-hide-nav-icons"]:before, .mod-hide-info-card .btn-switch[data-class="mod-hide-info-card"]:before, .mod-lean-subheader .btn-switch[data-class="mod-lean-subheader"]:before, .mod-disable-animation .btn-switch[data-class="mod-disable-animation"]:before, .mod-nav-link .btn-switch[data-class="mod-nav-link"]:before, .mod-nav-dark .btn-switch[data-class="mod-nav-dark"]:before, .mod-panel-icon .btn-switch[data-class="mod-panel-icon"]:before {
     content: "ON" !important;
     left: 7px !important;
@@ -447,10 +447,10 @@ RESULT:
     right: 0 !important;
     left: auto !important;
     background: #fff !important;
-    color: #886ab5 !important; }
+    color: #27408b !important; }
   .header-function-fixed .btn-switch[data-class="header-function-fixed"] + .onoffswitch-title, .nav-function-fixed .btn-switch[data-class="nav-function-fixed"] + .onoffswitch-title, .nav-function-minify .btn-switch[data-class="nav-function-minify"] + .onoffswitch-title, .nav-function-hidden .btn-switch[data-class="nav-function-hidden"] + .onoffswitch-title, .nav-function-top .btn-switch[data-class="nav-function-top"] + .onoffswitch-title, .footer-function-fixed .btn-switch[data-class="footer-function-fixed"] + .onoffswitch-title, .nav-mobile-push .btn-switch[data-class="nav-mobile-push"] + .onoffswitch-title, .nav-mobile-no-overlay .btn-switch[data-class="nav-mobile-no-overlay"] + .onoffswitch-title, .nav-mobile-slide-out .btn-switch[data-class="nav-mobile-slide-out"] + .onoffswitch-title, .mod-main-boxed .btn-switch[data-class="mod-main-boxed"] + .onoffswitch-title, .mod-fixed-bg .btn-switch[data-class="mod-fixed-bg"] + .onoffswitch-title, .mod-clean-page-bg .btn-switch[data-class="mod-clean-page-bg"] + .onoffswitch-title, .mod-pace-custom .btn-switch[data-class="mod-pace-custom"] + .onoffswitch-title, .mod-bigger-font .btn-switch[data-class="mod-bigger-font"] + .onoffswitch-title, .mod-high-contrast .btn-switch[data-class="mod-high-contrast"] + .onoffswitch-title, .mod-color-blind .btn-switch[data-class="mod-color-blind"] + .onoffswitch-title, .mod-hide-nav-icons .btn-switch[data-class="mod-hide-nav-icons"] + .onoffswitch-title, .mod-hide-info-card .btn-switch[data-class="mod-hide-info-card"] + .onoffswitch-title, .mod-lean-subheader .btn-switch[data-class="mod-lean-subheader"] + .onoffswitch-title, .mod-disable-animation .btn-switch[data-class="mod-disable-animation"] + .onoffswitch-title, .mod-nav-link .btn-switch[data-class="mod-nav-link"] + .onoffswitch-title, .mod-nav-dark .btn-switch[data-class="mod-nav-dark"] + .onoffswitch-title, .mod-panel-icon .btn-switch[data-class="mod-panel-icon"] + .onoffswitch-title {
     font-weight: 500;
-    color: #886ab5; }
+    color: #27408b; }
 
 .info-card img.cover {
   background-size: cover; }
@@ -501,7 +501,7 @@ RESULT:
   .dropdown-icon-menu > ul > li .btn:hover, .header-btn:hover {
     -webkit-box-shadow: none;
             box-shadow: none;
-    border-color: #886ab5;
+    border-color: #27408b;
     background: #a38cc6;
     color: #fff; }
 
@@ -551,7 +551,7 @@ RESULT:
   width: 20px;
   -webkit-animation: spin 0.5s infinite linear;
           animation: spin 0.5s infinite linear;
-  border: 2px solid #886ab5;
+  border: 2px solid #27408b;
   border-right-color: transparent;
   border-radius: 50%; }
 
@@ -638,7 +638,7 @@ RESULT:
 ========================================================================== */
 /* contains root variables to be used with css (see docs) */
 :root {
-  --theme-primary: #886ab5;
+  --theme-primary: #27408b;
   --theme-secondary: #868e96;
   --theme-success: #1dc9b7;
   --theme-info: #2196F3;
@@ -657,7 +657,7 @@ RESULT:
   --theme-primary-200: #b19dce;
   --theme-primary-300: #a38cc6;
   --theme-primary-400: #967bbd;
-  --theme-primary-500: #886ab5;
+  --theme-primary-500: #27408b;
   --theme-primary-600: #7a59ad;
   --theme-primary-700: #6e4e9e;
   --theme-primary-800: #62468d;
@@ -741,7 +741,7 @@ html {
     text-rendering: optimizeLegibility;
     background-color: #fff; }
     html body a {
-      color: #886ab5;
+      color: #27408b;
       text-decoration: none;
       background-color: transparent; }
       html body a:hover {
@@ -762,7 +762,7 @@ html {
     overflow: visible; }
     .header-icon:not(.btn) > [class*='fa-']:first-child,
     .header-icon:not(.btn) > .ni:first-child {
-      color: #886ab5;
+      color: #27408b;
       vertical-align: middle; }
     .header-icon:not(.btn) > [class*='fa-']:first-child {
       font-size: 21px; }
@@ -1095,7 +1095,7 @@ html {
     .app-list-item:hover > .icon-stack {
       font-size: 3.1875rem; }
   .app-list-item:active {
-    border-color: #886ab5;
+    border-color: #27408b;
     padding-top: 8px; }
     .app-list-item:active > .icon-stack {
       font-size: 3.125rem; }
@@ -1228,8 +1228,8 @@ html {
       .nav-menu li.active > a {
         color: white;
         background-color: rgba(255, 255, 255, 0.04);
-        -webkit-box-shadow: inset 3px 0 0 #886ab5;
-                box-shadow: inset 3px 0 0 #886ab5;
+        -webkit-box-shadow: inset 3px 0 0 #27408b;
+                box-shadow: inset 3px 0 0 #27408b;
         font-weight: 400; }
         .nav-menu li.active > a:hover > [class*='fa-'],
         .nav-menu li.active > a:hover > .ni {
@@ -1943,7 +1943,7 @@ html {
                 top: -1.7rem;
                 left: 0; }
             .nav-function-top .page-sidebar .primary-nav .nav-menu > li:hover > a {
-              color: #886ab5;
+              color: #27408b;
               background: transparent; }
               .nav-function-top .page-sidebar .primary-nav .nav-menu > li:hover > a + ul {
                 display: block !important;
@@ -2614,7 +2614,7 @@ html {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    color: #886ab5; }
+    color: #27408b; }
     .accordion .card .card-header .card-title.collapsed {
       color: #838383; }
 
@@ -2660,7 +2660,7 @@ html {
 
 .accordion.accordion-hover .card-title:not(.collapsed) {
   color: #fff;
-  background-color: #886ab5; }
+  background-color: #27408b; }
 
 /* 	DEV NOTE: The reason why we had to add this layer for alert colors is because BS4 
 	does not allow you to add your own alert colors via variable control rather 
@@ -2837,12 +2837,12 @@ html {
     border-color: transparent;
     border-left-color: #838383; }
   .breadcrumb-arrow li a:hover {
-    background-color: #886ab5; }
+    background-color: #27408b; }
     .breadcrumb-arrow li a:hover:before {
-      border-color: #886ab5;
+      border-color: #27408b;
       border-left-color: transparent; }
     .breadcrumb-arrow li a:hover:after {
-      border-left-color: #886ab5; }
+      border-left-color: #27408b; }
   .breadcrumb-arrow li a:active {
     background-color: #838383; }
     .breadcrumb-arrow li a:active:before {
@@ -2892,7 +2892,7 @@ html {
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
   .btn-switch.active {
     color: #fff;
-    background: #886ab5; }
+    background: #27408b; }
     .btn-switch.active:before {
       content: "ON";
       left: 7px;
@@ -2903,7 +2903,7 @@ html {
       right: 0;
       left: auto;
       background: #fff;
-      color: #886ab5; }
+      color: #27408b; }
 
 /* button used to close filter and mobile search */
 .btn-search-close {
@@ -2980,7 +2980,7 @@ html {
     height: 25px;
     width: 35px;
     line-height: 23px;
-    background: #886ab5;
+    background: #27408b;
     border-color: #7a59ad;
     -webkit-box-shadow: 0px 0px 10px #5790b3;
             box-shadow: 0px 0px 10px #5790b3; }
@@ -3683,7 +3683,7 @@ html {
   border-radius: 4px;
   border-width: 0px; }
   .pagination .page-link:hover {
-    background-color: #886ab5 !important;
+    background-color: #27408b !important;
     color: #fff; }
 
 .pagination.pagination-xs .page-link {
@@ -4105,7 +4105,7 @@ $menu-grid-icon: 5px;
 $menu-item-direction: 'top'; //top or left*/
 .menu-item,
 label.menu-open-button {
-  background: #886ab5;
+  background: #27408b;
   border-radius: 50%;
   width: 45px;
   height: 45px;
@@ -4337,10 +4337,10 @@ th {
             align-items: center;
     border-bottom: 1px solid transparent; }
     .nav-tabs-clean .nav-item .nav-link.active {
-      border-bottom: 1px solid #886ab5;
-      color: #886ab5; }
+      border-bottom: 1px solid #27408b;
+      color: #27408b; }
     .nav-tabs-clean .nav-item .nav-link:hover {
-      color: #886ab5; }
+      color: #27408b; }
 
 /* hack for waves effect breaking tabs */
 /*.nav-tabs .nav-item > .nav-link.waves-effect {
@@ -4363,7 +4363,7 @@ th {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #886ab5; }
+  color: #27408b; }
 
 .tooltip-inner {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial;
@@ -5964,14 +5964,14 @@ $grid-breakpoints: (
         height: 26px;
         font-size: 1rem; }
       .mobile-search-on:not(.mobile-nav-on) .search .app-forms #search-field {
-        border: 1px solid #886ab5;
+        border: 1px solid #27408b;
         padding-left: 1rem;
         padding-right: 3rem;
         width: 100%;
         max-width: none;
         background: #fff; }
         .mobile-search-on:not(.mobile-nav-on) .search .app-forms #search-field:focus {
-          border-color: #886ab5; }
+          border-color: #27408b; }
   .mobile-search-on:not(.mobile-nav-on) [data-class="mobile-nav-on"] {
     display: none !important; }
   .page-header [data-toggle="dropdown"] + .dropdown-menu {
@@ -6064,15 +6064,15 @@ $grid-breakpoints: (
 
 /* add background to focused inpur prepend and append */
 .form-control:focus ~ .input-group-prepend {
-  background: #886ab5; }
+  background: #27408b; }
 
 .has-length .input-group-text {
-  border-color: #886ab5; }
+  border-color: #27408b; }
   .has-length .input-group-text + .input-group-text {
     border-left: 1px solid rgba(0, 0, 0, 0.1); }
 
 .has-length .input-group-text:not([class^="bg-"]):not([class*=" bg-"]) {
-  background: #886ab5;
+  background: #27408b;
   color: #fff !important; }
 
 .input-group-text {
@@ -6217,7 +6217,7 @@ input[type="checkbox"]:checked + .custom-control-label {
     .settings-panel .expanded.theme-colors > ul:last-child {
       margin-right: 0; }
   .settings-panel .expanded.theme-colors #myapp-0 {
-    background: #886ab5;
+    background: #27408b;
     -webkit-box-shadow: inset 0 0 0 3px #2ba1ff;
             box-shadow: inset 0 0 0 3px #2ba1ff; }
   .settings-panel .expanded.theme-colors #myapp-1 {
@@ -6471,7 +6471,7 @@ body:not(.mod-pace-custom) .pace {
   -ms-user-select: none;
       user-select: none; }
   body:not(.mod-pace-custom) .pace .pace-progress {
-    background: #886ab5;
+    background: #27408b;
     position: fixed;
     z-index: 2000;
     top: 0;
@@ -6522,8 +6522,8 @@ body.mod-pace-custom {
       right: 100%;
       height: 100%;
       width: 100%;
-      background-color: #886ab5;
-      background-image: linear-gradient(135deg, #886ab5 0%, #886ab5 25%, #6e4e9e 25%, #6e4e9e 50%, #886ab5 50%, #886ab5 75%, #6e4e9e 75%, #6e4e9e 100%);
+      background-color: #27408b;
+      background-image: linear-gradient(135deg, #27408b 0%, #27408b 25%, #6e4e9e 25%, #6e4e9e 50%, #27408b 50%, #27408b 75%, #6e4e9e 75%, #6e4e9e 100%);
       background-repeat: repeat;
       background-position: 0 0;
       background-size: 13px 13px;
@@ -7263,7 +7263,7 @@ html:not(.root-text-sm):not(.root-text-lg):not(.root-text-xl) [data-class="root-
     color: white; }
 
 .bg-primary-500 {
-  background-color: #886ab5;
+  background-color: #27408b;
   color: white; }
   .bg-primary-500:hover {
     color: white; }
@@ -7308,7 +7308,7 @@ html:not(.root-text-sm):not(.root-text-lg):not(.root-text-xl) [data-class="root-
   color: #967bbd; }
 
 .color-primary-500 {
-  color: #886ab5; }
+  color: #27408b; }
 
 .color-primary-600 {
   color: #7a59ad; }
