--- a/public/css/formplugins/bootstrap-daterangepicker/bootstrap-daterangepicker.css
+++ b/public/css/formplugins/bootstrap-daterangepicker/bootstrap-daterangepicker.css
@@ -638,7 +638,7 @@ h6 small,
 .text-gradient {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(25%, #6e4e9e), color-stop(50%, #62468d), color-stop(75%, #0c7cd5), to(#0960a5));
   background: linear-gradient(180deg, #6e4e9e 25%, #62468d 50%, #0c7cd5 75%, #0960a5 100%);
-  color: #886ab5;
+  color: #27408b;
   background-clip: text;
   text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -804,6 +804,6 @@ RESULT:
   font-size: 0.8125rem;
   padding: 0.75rem 1rem; }
   .daterangepicker .ranges li.active {
-    background-color: #886ab5; }
+    background-color: #27408b; }
 
 /*# sourceMappingURL=bootstrap-daterangepicker.css.map */
