--- a/public/css/formplugins/ion-rangeslider/ion-rangeslider.css
+++ b/public/css/formplugins/ion-rangeslider/ion-rangeslider.css
@@ -1007,7 +1007,7 @@ h6 small,
 .text-gradient {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(25%, #6e4e9e), color-stop(50%, #62468d), color-stop(75%, #0c7cd5), to(#0960a5));
   background: linear-gradient(180deg, #6e4e9e 25%, #62468d 50%, #0c7cd5 75%, #0960a5 100%);
-  color: #886ab5;
+  color: #27408b;
   background-clip: text;
   text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -1086,7 +1086,7 @@ RESULT:
 .irs--flat .irs-to,
 .irs--flat .irs-single,
 .irs--flat .irs-handle > i:first-child {
-  background-color: #886ab5; }
+  background-color: #27408b; }
 
 .irs--flat .irs-from,
 .irs--flat .irs-to,
@@ -1096,7 +1096,7 @@ RESULT:
 .irs--flat .irs-from:before,
 .irs--flat .irs-to:before,
 .irs--flat .irs-single:before {
-  border-top-color: #886ab5; }
+  border-top-color: #27408b; }
 
 .irs--flat .irs-handle.state_hover > i:first-child,
 .irs--flat .irs-handle:hover > i:first-child {
@@ -1104,14 +1104,14 @@ RESULT:
 
 .irs--big .irs-bar {
   background-color: #a38cc6;
-  border-color: #886ab5;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), color-stop(30%, #a38cc6), to(#886ab5));
-  background: linear-gradient(to bottom, #ffffff 0%, #a38cc6 30%, #886ab5 100%); }
+  border-color: #27408b;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), color-stop(30%, #a38cc6), to(#27408b));
+  background: linear-gradient(to bottom, #ffffff 0%, #a38cc6 30%, #27408b 100%); }
 
 .irs--big .irs-from,
 .irs--big .irs-to,
 .irs--big .irs-single {
-  background: #886ab5; }
+  background: #27408b; }
 
 .irs--modern .irs-bar {
   background: #1ab3a3;
