--- a/public/css/json-path-picker/json-path-picker.css
+++ b/public/css/json-path-picker/json-path-picker.css
@@ -316,7 +316,7 @@ h6 small,
 .text-gradient {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(25%, #6e4e9e), color-stop(50%, #62468d), color-stop(75%, #0c7cd5), to(#0960a5));
   background: linear-gradient(180deg, #6e4e9e 25%, #62468d 50%, #0c7cd5 75%, #0960a5 100%);
-  color: #886ab5;
+  color: #27408b;
   background-clip: text;
   text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -412,7 +412,7 @@ ul.json-dict, ol.json-array {
 
 a.json-toggle {
   position: relative;
-  color: #886ab5;
+  color: #27408b;
   text-decoration: none;
   padding: 0.25rem 0;
   display: inline-block;
