--- a/public/css/statistics/chartist/chartist.css
+++ b/public/css/statistics/chartist/chartist.css
@@ -378,10 +378,10 @@ $ct-donut-width: 60px !default;
   stroke-width: 60px; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #886ab5; }
+  stroke: #27408b; }
 
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-slice-donut-solid, .ct-series-a .ct-area {
-  fill: #886ab5; }
+  fill: #27408b; }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: #fd3995; }
