--- a/public/src/scss/_skins/_skin-dark-modules/variables.scss
+++ b/public/src/scss/_skins/_skin-dark-modules/variables.scss
@@ -13,7 +13,7 @@ $dark-black: #000000;
 $dark-white: #ffffff;
 
 
-$rgba-primary: #886ab5;
+$rgba-primary: #27408b;
 $rgba-success: #1dc9b7;
 $rgba-info: #2196F3;
 $rgba-warning: #ffc241;
