nav filter ,, search bar background

--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -1554,10 +1554,10 @@ html {
   .nav-filter input[type="text"] {
     padding: 8px 40px 8px 14px;
     width: 14.625rem;
-    background: rgba(0, 0, 0, 0.4);
+    /* background: rgba(255, 255, 255, 0.4); */
     color: #fff; }
     .nav-filter input[type="text"]:not(:focus) {
-      border-color: rgba(0, 0, 0, 0.1); }
+      border-color: rgba(255, 255, 255, 0.1); }
     .nav-filter input[type="text"]:focus {
       border-color: #775c9f; }
 
