update on primary colors

--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -658,10 +658,10 @@ RESULT:
   --theme-primary-300: #a38cc6;
   --theme-primary-400: #967bbd;
   --theme-primary-500: #27408b;
-  --theme-primary-600: #7a59ad;
-  --theme-primary-700: #6e4e9e;
-  --theme-primary-800: #62468d;
-  --theme-primary-900: #563d7c;
+  --theme-primary-600: #27408b;
+  --theme-primary-700: #27408b;
+  --theme-primary-800: #27408b;
+  --theme-primary-900: #27408b;
   --theme-success-50: #7aece0;
   --theme-success-100: #63e9db;
   --theme-success-200: #4de5d5;
