--- a/public/css/formplugins/ion-rangeslider/ion-rangeslider.css
+++ b/public/css/formplugins/ion-rangeslider/ion-rangeslider.css
@@ -1100,7 +1100,7 @@ RESULT:
 
 .irs--flat .irs-handle.state_hover > i:first-child,
 .irs--flat .irs-handle:hover > i:first-child {
-  background-color: #7a59ad; }
+  background-color: #597aad; }
 
 .irs--big .irs-bar {
   background-color: #a38cc6;
