--- a/public/css/miscellaneous/fullcalendar/fullcalendar.bundle.css
+++ b/public/css/miscellaneous/fullcalendar/fullcalendar.bundle.css
@@ -1792,7 +1792,7 @@ RESULT:
   background: #967bbd; }
 
 .fc-event {
-  border: 1px solid #7a59ad; }
+  border: 1px solid #597aad; }
 
 .fc-day-top.fc-other-month {
   opacity: 1; }
