--- a/public/src/content/statistics/statistics_peity/statistics_peity.hbs
+++ b/public/src/content/statistics/statistics_peity/statistics_peity.hbs
@@ -149,17 +149,17 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Bar charts can have positive or negative integers. You can change the bar colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
+								Bar charts can have positive or negative integers. You can change the bar colors via the following <code> data-peity='{ "fill": ["#597aad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"], "height": 40, "width": "110" }'>5,3,9,6,5,9,7,3,5,2</span>
+									<span class="peity-bar" data-peity='{ "fill": ["#597aad","#27408b","#967bbd","#a38cc6"], "height": 40, "width": "110" }'>5,3,9,6,5,9,7,3,5,2</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#1dc9b7"], "height": 40, "width": "110" }'>4,-3,-6,-4,-5,-4,7,-3,-5,2</span>
+									<span class="peity-bar" data-peity='{ "fill": ["#597aad","#1dc9b7"], "height": 40, "width": "110" }'>4,-3,-6,-4,-5,-4,7,-3,-5,2</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-bar" data-peity='{ "fill": ["#7a59ad","#1dc9b7"], "height": 40, "width": "110" }'>0,1,7,6,4,2,3,5,3,4</span>
+									<span class="peity-bar" data-peity='{ "fill": ["#597aad","#1dc9b7"], "height": 40, "width": "110" }'>0,1,7,6,4,2,3,5,3,4</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="peity-bar" data-peity='{ "fill": ["#1dc9b7"], "height": 40, "width": "110" }'>0,-1,-7,-6,-4,-2,-3,-5,-3,-4</span>
@@ -184,14 +184,14 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Pie charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
+								Pie charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#597aad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-pie" data-peity='{ "fill": ["#7a59ad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>1/4</span>
+									<span class="peity-pie" data-peity='{ "fill": ["#597aad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>1/4</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-pie" data-peity='{ "fill": ["#7a59ad","#ffc241","#37e2d0","#51adf6"], "height": 40, "width": "50" }'>7,6,3,4</span>
+									<span class="peity-pie" data-peity='{ "fill": ["#597aad","#ffc241","#37e2d0","#51adf6"], "height": 40, "width": "50" }'>7,6,3,4</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="peity-pie" data-peity='{ "fill": ["#21dfcb","#fd3995"], "height": 40, "width": "50" }'>5/10</span>
@@ -223,14 +223,14 @@
 					<div class="panel-container show">
 						<div class="panel-content">									
 							<div class="panel-tag">
-								Donut charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#7a59ad","#27408b","#967bbd","#a38cc6"] }'</code>
+								Donut charts can have any values. You can change the colors via the following <code> data-peity='{ "fill": ["#597aad","#27408b","#967bbd","#a38cc6"] }'</code>
 							</div>
 							<div class="demo d-flex justify-content-center flex-wrap d-sm-block">
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-donut" data-peity='{ "fill": ["#7a59ad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>1/3</span>
+									<span class="peity-donut" data-peity='{ "fill": ["#597aad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>1/3</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
-									<span class="peity-donut" data-peity='{ "fill": ["#7a59ad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>10,4,4,6</span>
+									<span class="peity-donut" data-peity='{ "fill": ["#597aad","#ffc241","#967bbd","#ffdb8e"], "height": 40, "width": "50" }'>10,4,4,6</span>
 								</div>
 								<div class="p-3 w-auto text-center d-inline-flex border-faded">
 									<span class="peity-donut" data-peity='{ "fill": ["#21dfcb","#fd3995"], "height": 40, "width": "50" }'>5/10</span>
